# curlws

./: .codecov.yml  .dockerignore  .gitignore  .sonar-project.properties  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  autobahn.sh  meson.build  meson_options.txt
.github/scripts/: get_coverity.sh  get_sonarcloud.sh  make_release_artifacts.sh  sonarcloud.sh
.github/workflows/: code-format.yml  codeql-analysis.yml  coverity.yml  format.yml  push.yml  release.yml  tag.yml
.reuse/: dep5
cmake/: BitwiseVersion.cmake  Coverage.cmake  FindCunit.cmake  FindTrowerBase64.cmake  LicenseLinterTarget.cmake  LocalInstallPaths.cmake
conf/: __PROJECT__.env.example  __PROJECT__.service
deploy/packaging/: __PROJECT__.spec  entrypoint.sh
examples/: CMakeLists.txt
examples/cli/: CMakeLists.txt  cli.c
include/curlws/: curlws.h  curlwsver.h.in  meson.build
src/: CMakeLists.txt  cb.c  cb.h  curlws.c  curlws.h  curlwsver.h.in  data_block_sender.c  data_block_sender.h  frame.c  frame.h  frame_senders.c  frame_senders.h  handlers.c  handlers.h  header.c  header.h  internal.h  memory.c  memory.h  notice.c  random.c  random.h  receive.c  receive.h  send.c  send.h  sha1.h  sha1_internal.c  sha1_openssl.c  utf8.c  utf8.h  utils.c  utils.h  verbose.c  verbose.h  ws.c  ws.h
src/sha1/: CMakeLists.txt  sha-private.h  sha.h  sha1.c
tests/: CMakeLists.txt  autobahn-testee-parallel.c  autobahn-testee.c  autobahn_report.c  check_autobahn_results.sh  curlws_mocks.c  simple.c  test_autobahn_27.c  test_curlws.c  test_data_block_sender.c  test_frame.c  test_frame_senders.c  test_handlers.c  test_header.c  test_memory.c  test_mocked_curlws.c  test_notice.c  test_receive.c  test_send.c  test_sha1.c  test_utf8.c  test_utils.c
tools/: autobahn.sh  check_autobahn_results.sh
